# fpga-testgen

./: .gitignore  Makefile  README.md  pyproject.toml
fpga_testgen/: __init__.py  cli.py  config.py  coverage.py  generator.py  parser.py  pipeline.py  prompts.py  schemas.py  server.py  simulator.py
tests/: test_parser.py
tests/fixtures/: alu.v  alu_tb.v  counter.v  counter_tb.v  fsm.v  traffic_light_tb.v
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx  api.ts  types.ts
web/src/components/: Editor.tsx  Pipeline.tsx  Results.tsx
